--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="header-text">
           <p>Front end developer</p>
           <h1>
-            Hi, I am <span class="namemy">&nbsp;Himal Dahal </span> <br />
+            Hello, I am <span class="namemy">&nbsp;Himal Dahal </span> <br />
             from Nepal
           </h1>
         </div>
