--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
         <div class="col-2">
           <h1 class="subtitle">About Me</h1>
           <p>
-            My self Himal Dahal an Electronics and communication engineer
-            searching a carrer in the fileld of programming with the
-            wilingness of becoming a good developer in future
+            My self Himal Dahal an Electronics and communication engineer currently working as front end developer beside that I can work on AI/ML and Telecmmunication related works.
+            
           </p>
           <div class="tab-titles">
             <p class="tab-links active-link" onclick="opentab('Skills')">
@@ -69,10 +68,9 @@
           </div>
           <div class="tab-content active-element" id="Skills">
             <ul>
-              <li><span>UI/UX </span><br />Web interfaces</li>
+              <li><span>UI/UX </span><br />Web page developmet</li>
               <li>
-                <span>Mobile app development </span><br />Desktop application
-                development
+                <span>BSC level and site level work of telecom</span><br />ML Model development
               </li>
               <li><span>PCB designing </span><br />3D Modeling</li>
             </ul>
@@ -91,10 +89,10 @@
           </div>
           <div class="tab-content" id="Education">
             <ul>
-              <li><span>2071</span> <br>SLC from Nepal Board </li>
-              <li><span>2073</span><br>+2 from Nasa international and HSEB</li>
+              <li><span>2071</span> <br>School leaving certificated</li>
+              <li><span>2073</span><br>+2 science from Nasa international college</li>
               <li>
-                <span>2079</span><br>Bachelors in Electronics and communication
+                <span>2079</span><br>Bachelors in Electronics and communication Engineering
               </li>
             </ul>
           </div>
@@ -109,20 +107,21 @@
       <div class="services-list">
         <div>
           <i class="fa-brands fa-r-project"></i>
-          <h2>Project Management</h2>
-          <p>Manage all the projects which are currently running</p>
+          <h2>UI/UX </h2>
+          <p> creating a positive, facinating, and engaging designs for better user experience.</p>
           <a href="#">Learn More</a>
         </div>
         <div>
           <i class="fa-brands fa-web-awesome"></i>
           <h2>Web Development</h2>
-          <p>Full stack development of web based works</p>
+          <p>Translating design mockups and wireframes into functional, interactive, and responsive web pages using HTML, CSS, and JavaScript to make websites
+             and applications visually appealing, user-friendly, and accessible across various devices and browsers. </p>
           <a href="#">Learn More</a>
         </div>
         <div>
           <i class="fa-solid fa-code"></i>
-          <h2>App Development</h2>
-          <p>Any type of mobile app development work</p>
+          <h2>Content creation and writing</h2>
+          <p> Crate content of different fiels as per clients requirement and provide them a final result fulfilling their requirement.</p>
           <a href="#">Learn More</a>
         </div>
       </div>
@@ -177,7 +176,7 @@
   <!-- contact details -->
   <div id="contact">
     <div class="container">
-      <div class="row contact-row">
+      <div class="contact-row">
         <div class="column-left">
           <h1 class="subtitle" style="margin-top: 20px;">Contact Me</h1>
          <a href="mailto:dahalhimal321@gmail.com"> <p><i class="fa-solid fa-envelope"></i> dahalhimal321@gmail.com</p></a>
@@ -196,7 +195,7 @@
           </a>
         </div>
         <div class="column-right">
-          <form>
+          <form >
             <input type="text" name="Name" placeholder="Your Name" required>
             <input type="text" name="Email" placeholder="Your Email" required>
             <textarea type="text" name="Message" placeholder="Your Message" required></textarea>
@@ -244,11 +243,11 @@
 
     }
     function closemenu() {
-      sidemenu.style.right = "-130px"
+      sidemenu.style.right = "-250px"
 
     }
 
   </script>
+ 
 </body>
-
 </html>
