--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           </a>
         </div>
         <div class="column-right">
-          <form >
+          <form action="https://formspree.io/f/xldrdbpb" method="post">
             <input type="text" name="Name" placeholder="Your Name" required>
             <input type="text" name="Email" placeholder="Your Email" required>
             <textarea type="text" name="Message" placeholder="Your Message" required></textarea>
