--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="work">
           <img src="images/work1.jpg" />
           <div class="layeres">
-            <h1>Machine learning and PCB design</h1>
+            <h1>AI/ML and PCB design</h1>
             <p>
               Perform the machine learning and printed cricuit board related
               wors
@@ -161,7 +161,7 @@
             <h1>Content creation and writing</h1>
             <p>
               Imagine a content of any topic and write blogs,essay and other
-              required written work of specific topic
+              required work on specific topic
             </p>
             <a href="#"><i class="fa-solid fa-link"></i> </a>
           </div>
